--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.1",
+    "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "node": "^18.14.0",
     "react": "^18",
